// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItem renders with custom icon 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
  <div
    className="ax-context-menu__item-icon"
  >
    <svg
      className="ax-icon ax-icon--heart"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </div>
</button>
`;

exports[`ContextMenuItem renders with defaultProps 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with disabled 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
  disabled={true}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={[Function]}
    >
      <input
        checked={false}
        className="ax-checkbox__input"
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect and selected 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium ax-context-menu__item--selected ax-text--strong"
  data-ax-context-menu-item={true}
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={[Function]}
    >
      <input
        checked={true}
        className="ax-checkbox__input"
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with multiSelect and title 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
  title="Lorem ipsum dolor sit amet"
>
  <div
    className="ax-context-menu__item-checkbox"
  >
    <label
      className="ax-checkbox ax-space--x2"
      onClick={[Function]}
    >
      <input
        checked={false}
        className="ax-checkbox__input"
        type="checkbox"
      />
      <span
        className="ax-checkbox__indicator"
      />
    </label>
  </div>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;

exports[`ContextMenuItem renders with selected 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium ax-context-menu__item--selected ax-text--strong"
  data-ax-context-menu-item={true}
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
  <div
    className="ax-context-menu__item-icon"
  >
    <svg
      className="ax-icon ax-icon--tick ax-cloak ax-cloak--visible"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </div>
</button>
`;

exports[`ContextMenuItem renders with title 1`] = `
<button
  className="ax-context-menu__item ax-context-menu__item--padding-vertical-medium"
  data-ax-context-menu-item={true}
  title="Lorem ipsum dolor sit amet"
>
  <div
    className="ax-context-menu__item-content"
  >
    Lorem ipsum
  </div>
</button>
`;
